ArrayList-LinkedList update + Currency class test